Agentforce/force-app/main/default/objects/Contract_Variation__c/Contract_Variation__c.object-meta.xml
<CustomObject>
    <description>AD-326 to ensure a document is uploaded when a contract variation with the type of Additional Site is created.</description>
    <label>Contract Variation</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Contract Variation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Variation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>