Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>AD-326 to ensure a document is uploaded when a contract variation with the type of Additional Site is created</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Variation</relationshipLabel>
    <relationshipName>Contract_Variation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>