Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <formula>Contract__r.Contract_Name__c</formula>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>