Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Contract_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Email__c</fullName>
    <formula>Contract__r.Owner_Email__c</formula>
    <label>Contract Owner Email</label>
    <type>Text</type>
</CustomField>