Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Contract_Variation_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Variation_CaseSafeID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <label>Contract Variation CaseSafeID</label>
    <type>Text</type>
</CustomField>