Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Gross_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percentage__c</fullName>
    <label>GM %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>