Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Legacy_OCS_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Id__c</fullName>
    <label>Legacy OCS Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>