Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Negative_Variation__c.field-meta.xml
<CustomField>
    <fullName>Negative_Variation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if this variation has a negative financial impact.</inlineHelpText>
    <label>Negative Variation</label>
    <type>Checkbox</type>
</CustomField>