Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Operational_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Operational_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operational Opportunity</label>
    <referenceTo>OperationalOpportunity__c</referenceTo>
    <relationshipLabel>Contract Variations</relationshipLabel>
    <relationshipName>Contract_Variation</relationshipName>
    <type>Lookup</type>
</CustomField>