Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <formula>text(Contract__r.Owner:User.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>