Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>