Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>AD-326 to ensure a document is uploaded when a contract variation with the type of Additional Site is created.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Site</fullName>
            </value>
            <value>
                <fullName>Change to T&amp;Cs</fullName>
            </value>
            <value>
                <fullName>Contract Extension</fullName>
            </value>
            <value>
                <fullName>New Service</fullName>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Service Increase</fullName>
            </value>
            <value>
                <fullName>Service Reduction</fullName>
            </value>
            <value>
                <fullName>Site Closure</fullName>
            </value>
            <value>
                <fullName>Structure Change</fullName>
            </value>
            <value>
                <fullName>Annual Price Increase</fullName>
                <isActive>false</isActive>
                <label>Annual Price Increase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>