Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>If this is a negative financial variation then please enter a positive number here and tick the &apos;Negative Impact&apos; box.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>