Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Variation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Variation_Comments__c</fullName>
    <label>Variation Comments</label>
    <type>TextArea</type>
</CustomField>