Agentforce/force-app/main/default/objects/Contract_Variation__c/fields/Variation_Date__c.field-meta.xml
<CustomField>
    <fullName>Variation_Date__c</fullName>
    <label>Variation Date</label>
    <type>Date</type>
</CustomField>