Agentforce/force-app/main/default/objects/Contract_Variation__c/listViews/Variations_Created_by_Me.listView-meta.xml
<ListView>
    <fullName>Variations_Created_by_Me</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contract__c</columns>
    <columns>Type__c</columns>
    <columns>Value__c</columns>
    <columns>Variation_Date__c</columns>
    <columns>Variation_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <label>Variations Created by Me</label>
</ListView>